fix: consultation-form spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5282,6 +5282,11 @@ body.admin-bar .header-menu-area.sticky_menu {
   gap: 20px;
   flex-direction: row;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .appointment-area.style-2 .appointment-form form {
+    margin: 18px;
+  }
+}
 .appointment-area.style-2 .appointment-form form div:last-child {
   grid-column: 1/3;
 }
@@ -5342,6 +5347,11 @@ body.admin-bar .header-menu-area.sticky_menu {
   align-items: center;
   height: 1px;
   margin-bottom: 43px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .appointment-area .title-border2 {
+    margin-bottom: 18px;
+  }
 }
 .appointment-area .title-border2 p {
   background: rgba(223, 223, 223, 0.2);
