--- a/sass/modules/_appointment-area.scss
+++ b/sass/modules/_appointment-area.scss
@@ -231,6 +231,9 @@
                 // align-items: center;
                 gap: 20px;
                 flex-direction: row;
+                @include sm{
+                    margin: 18px;
+                }
                 div:last-child {
                     grid-column: 1 / 3;
                 }
@@ -289,6 +292,9 @@
         align-items: center;
         height: 1px;
         margin-bottom: 43px;
+        @include sm{
+            margin-bottom: 18px;
+        }
         p {
             background: rgba(223, 223, 223, 0.20);
             width: 349px;
